Repair example characters on mobile

--- a/dapp/src/styles.css
+++ b/dapp/src/styles.css
@@ -97,16 +97,16 @@ button:hover {
 
 .ExampleCharacterTitle{
   margin-top:40px;
-  width:80px;
   font-size:1.75rem;
   text-align:center;
 }
-@media only screen and (max-device-width: 800px) {
+@media (max-width: 800px) {
   .ExampleCharacterTitle{
     font-size:1rem;
   }
 
   .ExampleCharacter{
+    margin: 20px auto;
     width:90px;
   }
 }
